Fix student references in Groups
Adding a student now adds a reference to it to the group it is assigned
Deleting a student now deletes a reference to it from the group it was in
Deleting a group now deletes all students inside the group as well
Update typical students and groups
Affected test cases have been fixed