@@ -12,9 +12,10 @@ import static seedu.address.logic.commands.CommandTestUtil.VALID_TELEGRAM_HANDLE
 import static seedu.address.logic.commands.CommandTestUtil.VALID_TELEGRAM_HANDLE_BOB;
 import static seedu.address.testutil.TypicalGroups.TYPICAL_GROUP_CS2101;
 import static seedu.address.testutil.TypicalGroups.TYPICAL_GROUP_CS2103T;
+import static seedu.address.testutil.TypicalGroups.TYPICAL_GROUP_CS2103T_DESC;
+import static seedu.address.testutil.TypicalGroups.TYPICAL_GROUP_CS2103T_NAME;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import seedu.address.model.AddressBook;
@@ -27,26 +28,32 @@ import seedu.address.model.student.Student;
 public class TypicalStudents {
 
     public static final Student ALICE = new StudentBuilder().withName("Alice Pauline").withEmail("alice@example.com")
-            .withGroup(TYPICAL_GROUP_CS2103T).withTelegramHandle("@alice_pauline").build();
+            .withTelegramHandle("@alice_pauline")
+            .withGroup(TYPICAL_GROUP_CS2103T_NAME, TYPICAL_GROUP_CS2103T_DESC).build();
     public static final Student BENSON = new StudentBuilder().withName("Benson Meier").withEmail("johnd@example.com")
-            .withGroup(TYPICAL_GROUP_CS2103T).withTelegramHandle("@benson_meier").build();
-    public static final Student CARL = new StudentBuilder().withName("Carl Kurz").withTelegramHandle("@carl_kurz")
-            .withEmail("heinz@example.com").withGroup(TYPICAL_GROUP_CS2103T).build();
-    public static final Student DANIEL = new StudentBuilder().withName("Daniel Meier")
-            .withTelegramHandle("@daniel_meier").withEmail("cornelia@example.com")
-            .withGroup(TYPICAL_GROUP_CS2103T).build();
+            .withTelegramHandle("@benson_meier")
+            .withGroup(TYPICAL_GROUP_CS2103T_NAME, TYPICAL_GROUP_CS2103T_DESC).build();
+    public static final Student CARL = new StudentBuilder().withName("Carl Kurz").withEmail("heinz@example.com")
+            .withTelegramHandle("@carl_kurz")
+            .withGroup(TYPICAL_GROUP_CS2103T_NAME, TYPICAL_GROUP_CS2103T_DESC).build();
+    public static final Student DANIEL = new StudentBuilder().withName("Daniel Meier").withEmail("cornelia@example.com")
+            .withTelegramHandle("@daniel_meier")
+            .withGroup(TYPICAL_GROUP_CS2103T_NAME, TYPICAL_GROUP_CS2103T_DESC).build();
     public static final Student ELLE = new StudentBuilder().withName("Elle Meyer").withTelegramHandle("@elle_meyer")
-            .withEmail("werner@example.com").withGroup(TYPICAL_GROUP_CS2103T).build();
+            .withEmail("werner@example.com")
+            .withGroup(TYPICAL_GROUP_CS2103T_NAME, TYPICAL_GROUP_CS2103T_DESC).build();
     public static final Student FIONA = new StudentBuilder().withName("Fiona Kunz").withTelegramHandle("@fiona_kunz")
-            .withEmail("lydia@example.com").withGroup(TYPICAL_GROUP_CS2103T).build();
+            .withEmail("lydia@example.com")
+            .withGroup(TYPICAL_GROUP_CS2103T_NAME, TYPICAL_GROUP_CS2103T_DESC).build();
     public static final Student GEORGE = new StudentBuilder().withName("George Best").withTelegramHandle("@george_best")
-            .withEmail("anna@example.com").withGroup(TYPICAL_GROUP_CS2103T).build();
+            .withEmail("anna@example.com")
+            .withGroup(TYPICAL_GROUP_CS2103T_NAME, TYPICAL_GROUP_CS2103T_DESC).build();
 
     // Manually added
     public static final Student HOON = new StudentBuilder().withName("Hoon Meier").withTelegramHandle("@hoon_meier")
-            .withEmail("stefan@example.com").withGroup(TYPICAL_GROUP_CS2103T).build();
+            .withEmail("stefan@example.com").withGroup(TYPICAL_GROUP_CS2103T_NAME, TYPICAL_GROUP_CS2103T_DESC).build();
     public static final Student IDA = new StudentBuilder().withName("Ida Mueller").withTelegramHandle("@ida_mueller")
-            .withEmail("hans@example.com").withGroup(TYPICAL_GROUP_CS2103T).build();
+            .withEmail("hans@example.com").withGroup(TYPICAL_GROUP_CS2103T_NAME, TYPICAL_GROUP_CS2103T_DESC).build();
 
     // Manually added - Student's details found in {@code CommandTestUtil}
     public static final Student AMY = new StudentBuilder().withName(VALID_NAME_AMY)
@@ -67,6 +74,7 @@ public class TypicalStudents {
      */
     public static AddressBook getTypicalAddressBook() {
         AddressBook ab = new AddressBook();
+
         for (Student student : getTypicalStudents()) {
             ab.addStudent(student);
         }
@@ -79,7 +87,7 @@ public class TypicalStudents {
     }
 
     public static List<Student> getTypicalStudents() {
-        return new ArrayList<>(Arrays.asList(ALICE, BENSON, CARL, DANIEL, ELLE, FIONA, GEORGE));
+        return new ArrayList<>(List.of(ALICE, BENSON, CARL, DANIEL, ELLE, FIONA, GEORGE));
     }
 
     public static List<Group> getTypicalGroups() {
